feat(*): add presentation ending and application exit

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,6 +22,7 @@
                     <button id="start" class="btn btn-default" type="button">Start</button>
                     <button id="next_slide" class="btn btn-default" type="button">Next</button>
                     <button id="prev_slide" class="btn btn-default" type="button">Previous</button>
+                    <button id="end" class="btn btn-default" type="button">End</button>
                 </div>
             </form>
         </div>
